chore: bump version to 150.3-13

--- a/docs/locales/en/app-assets.json
+++ b/docs/locales/en/app-assets.json
@@ -1,6 +1,7 @@
 {
   "Balances": "Balances",
   "Create": "Create",
+  "Foreign assets": "Foreign assets",
   "Mint": "Mint",
   "Next": "Next",
   "No": "No",
@@ -44,10 +45,12 @@
   "assets": "assets",
   "create asset {{step}}/{{steps}}": "create asset {{step}}/{{steps}}",
   "creator account": "creator account",
+  "foreign assets": "foreign assets",
   "free balance": "free balance",
   "freezer": "freezer",
   "freezer account": "freezer account",
   "frozen": "frozen",
+  "holders": "holders",
   "issuer": "issuer",
   "issuer account": "issuer account",
   "minimum balance": "minimum balance",
