--- a/docs/locales/en/translation.json
+++ b/docs/locales/en/translation.json
@@ -293,6 +293,7 @@
   "Folder": "",
   "For approvals outstanding approvers will be shown, for hashes that should be cancelled the first approver is required.": "",
   "For fund security, your session key should not match your stash key.": "",
+  "Foreign assets": "",
   "Forget": "",
   "Forget this account": "",
   "Forget this address": "",
@@ -1439,6 +1440,7 @@
   "first": "",
   "first - last": "",
   "first period": "",
+  "foreign assets": "",
   "forks": "",
   "found signatories": "",
   "founder": "",
@@ -1466,6 +1468,7 @@
   "hex-encoded call": "",
   "hex-encoded storage key": "",
   "historic results": "",
+  "holders": "",
   "https://example.com": "",
   "id": "",
   "ideal staked": "",
